--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,4 +9,20 @@
     justify-content: center;
 }
 
+#menu li{
+    display: inline;
+    padding: 50px;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+#menu li a{
+    text-decoration: none;
+    color: blueviolet;
+}
+
+#menu li a:hover{
+    color: gray;
+}
+
 /* Estilos da página contato.html*/
