css simples concluído

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,4 +25,12 @@
     color: gray;
 }
 
+.p40{
+    padding: 40px;
+}
+
+.wh{
+    width: 500 px;
+    height: 400 px  ;
+}
 /* Estilos da página contato.html*/
